--- a/config.yml
+++ b/config.yml
@@ -18,6 +18,9 @@ faucet:
     coins: ["5token", "100000stake"]
 genesis:
     app_state:
+        nftoracle:
+            params:
+                mint_request_active_duration: 600
         admin:
             authorization:
                 root_admin: 6nft1q3566qhn4hnjf8l0zt90daew2ade2yc6l5usaq
