--- a/config.yml
+++ b/config.yml
@@ -33,6 +33,7 @@ genesis:
         nftoracle:
             params:
                 mint_request_active_duration: "120s"
+                action_request_active_duration: "120s"
         admin:
             authorization:
                 root_admin: 6nft1q3566qhn4hnjf8l0zt90daew2ade2yc6l5usaq
