--- a/config.yml
+++ b/config.yml
@@ -34,6 +34,6 @@ genesis:
             params:
                 mint_request_active_duration: "120s"
                 action_request_active_duration: "120s"
-        admin:
+        nftadmin:
             authorization:
                 root_admin: 6nft1q3566qhn4hnjf8l0zt90daew2ade2yc6l5usaq
