--- a/config.yml
+++ b/config.yml
@@ -47,3 +47,11 @@ genesis:
         nftadmin:
             authorization:
                 root_admin: 6nft1q3566qhn4hnjf8l0zt90daew2ade2yc6l5usaq
+build:
+    binary: "sixnftd"
+    main: "cmd/sixnftd"
+    ldflags:
+      - '-X "github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger"'
+    tags:
+      - netgo
+      - ledger
