--- a/config.yml
+++ b/config.yml
@@ -30,10 +30,12 @@ validator:
     name: alice
     staked: "2000000000stake"
 client:
-    openapi:
-        path: "docs/static/openapi.yml"
-    vuex:
-        path: "vue/src/store"
+  openapi:
+    path: "docs/static/openapi.yml"
+  typescript:
+    path: "ts-client"
+  vuex:
+    path: "vue/src/store"
 faucet:
     name: bob
     coins: ["5token", "100000stake"]
